--- a/hw1.html
+++ b/hw1.html
@@ -28,5 +28,8 @@ devices are blurring even these lines.
 <p>
 <a href="#heading1">Top</a>
 </p>
+<p>
+<a href="index.php">Home</a>
+</p>
 </body>
 </html>
